// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonS3BuildCacheProvider Has an expected cached credential name (write allowed) 1`] = `
Array [
  "aws-s3|region-name|localhost:9000|cacheWriteAllowed",
  "credential",
]
`;

exports[`AmazonS3BuildCacheProvider Has an expected cached credential name (write not allowed) 1`] = `
Array [
  "aws-s3|region-name|localhost:9000",
  "credential",
]
`;
